--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,3 +40,22 @@ dependencies {
 checkstyle {
     toolVersion = "10.3.3"
 }
+
+tasks.test {
+    useJUnitPlatform()
+    // https://technology.lastminute.com/junit5-kotlin-and-gradle-dsl/
+    testLogging {
+        exceptionFormat = TestExceptionFormat.FULL
+        events = mutableSetOf(TestLogEvent.FAILED, TestLogEvent.PASSED, TestLogEvent.SKIPPED)
+        // showStackTraces = true
+        // showCauses = true
+        showStandardStreams = true
+    }
+}
+
+
+tasks.jacocoTestReport {
+    reports {
+        xml.required.set(true)
+    }
+}
