--- a/.github/workflows/java.yml
+++ b/.github/workflows/java.yml
@@ -2,21 +2,25 @@ name: Java CI
 
 on:
   - push
+  - pull_request
 
 jobs:
   build:
     runs-on: ubuntu-latest
-
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-java@v2
+      - uses: actions/checkout@v3
+      - name: Set up JDK 20
+        uses: actions/setup-java@v3
         with:
-          distribution: 'temurin'
           java-version: '20'
+          distribution: 'temurin'
       - name: Build with Gradle
-        run: make build
+        uses: gradle/gradle-build-action@v2
+        with:
+          arguments: build
+          build-root-directory: app
       - name: Publish code coverage
-        uses: paambaati/codeclimate-action@v3.0.0
+        uses: paambaati/codeclimate-action@v3.2.0
         env:
           CC_TEST_REPORTER_ID: ${{secrets.CC_TEST_REPORTER_ID}}
           JACOCO_SOURCE_PATH: app/src/main/java
