--- a/app/Makefile
+++ b/app/Makefile
@@ -1,7 +1,5 @@
-.DEFAULT_GOAL := build-run
-
 setup:
-	./gradlew wrapper --gradle-version 8.5
+	gradle wrapper --gradle-version 8.2
 
 clean:
 	./gradlew clean
@@ -9,14 +7,20 @@ clean:
 build:
 	./gradlew clean build
 
+start:
+	APP_ENV=development ./gradlew run
+
 install:
-	./gradlew clean install
+	./gradlew install
 
-run-dist:
-	./build/install/java-package/bin/java-package
+start-dist:
+	APP_ENV=production ./build/install/app/bin/app
 
-run:
-	./gradlew run
+generate-migrations:
+	./gradlew generateMigrations
+
+lint:
+	./gradlew checkstyleMain checkstyleTest
 
 test:
 	./gradlew test
@@ -24,13 +28,7 @@ test:
 report:
 	./gradlew jacocoTestReport
 
-lint:
-	./gradlew checkstyleMain
-
-check-deps:
-	./gradlew dependencyUpdates -Drevision=release
-
-
-build-run: build run
+check-updates:
+	./gradlew dependencyUpdates
 
 .PHONY: build
