--- a/app/Makefile
+++ b/app/Makefile
@@ -14,7 +14,7 @@ install:
 	./gradlew install
 
 start-dist:
-	APP_ENV=production ./build/install/app/bin/app
+	APP_ENV=prod ./build/install/app/bin/app
 
 generate-migrations:
 	./gradlew generateMigrations
