--- a/app/Makefile
+++ b/app/Makefile
@@ -8,7 +8,7 @@ build:
 	./gradlew clean build
 
 start:
-	APP_ENV=development ./gradlew run
+	APP_ENV=dev ./gradlew run
 
 install:
 	./gradlew install
